# qdrant_search_example

./: .env  Data_exploration & quality measurment.ipynb  Dockerfile_base  Dockerfile_fill  Dockerfile_frontend  README.md  compose.yaml  fill_database.py  main_page.py  pyproject.toml  requirements.txt
config/: config.yaml
